--- a/package.json
+++ b/package.json
@@ -8,11 +8,13 @@
     "@testing-library/user-event": "^13.5.0",
     "mobx": "^6.7.0",
     "mobx-react": "^7.6.0",
+    "mobx-react-form": "^3.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-highlight-words": "^0.18.0",
     "react-router-dom": "^6.4.4",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
+    "validatorjs": "^3.22.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
